tests/ui/ast_aggregate.stderr
error[E0505]: cannot move out of `elements` because it is borrowed
  --> tests/ui/ast_aggregate.rs:27:10
   |
21 |     let elements = vec![cond];
   |         -------- binding `elements` declared here
...
25 |     let agg = ast::aggregate(&loc, Some(guard_l), &elements, Some(guard_r)).unwrap();
   |                                                   --------- borrow of `elements` occurs here
26 |
27 |     drop(elements);
   |          ^^^^^^^^ move out of `elements` occurs here
28 |     let _end = agg;
   |                --- borrow later used here
